--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://shunjid.github.io/simple-hooks",
   "eslintConfig": {
     "extends": [
       "react-app",
